Added simple test for bbc.com, added debugging info for logging

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,13 +4,13 @@ log4j.rootLogger=INFO, CONSOLE, FILE
 log4j.appender.CONSOLE=org.apache.logging.log4j.core.appender.ConsoleAppender
 log4j.appender.CONSOLE.threshold=INFO
 log4j.appender.CONSOLE.layout=org.apache.logging.log4j.core.layout.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=[%-5p] : %c:%L : %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p : %c:%L : %m%n
 
 # FILE appender customisation
 log4j.appender.FILE=org.apache.logging.log4j.core.appender.RollingFileAppender
-log4j.appender.FILE.File=./out/logging/main.log
+log4j.appender.FILE.File=target\\log\\main.log
 log4j.appender.FILE.MaxFileSize=1MB
 log4j.appender.FILE.threshold=INFO
 log4j.appender.FILE.MaxBackupIndex=2
 log4j.appender.FILE.layout=org.apache.logging.log4j.core.layout.PatternLayout
-log4j.appender.FILE.layout.ConversionPattern=[%-5p] : %c:%L : %m%n
+log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p : %c:%L : %m%n
