--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <selenium.version>3.141.59</selenium.version>
         <lombok.version>1.18.12</lombok.version>
         <logger.version>2.13.0</logger.version>
+        <junit.jupiter.version>5.6.0</junit.jupiter.version>
     </properties>
 
     <build>
@@ -51,6 +52,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- Logging dependencies -->
