--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <java.version>1.8</java.version>
         <selenium.version>3.141.59</selenium.version>
         <lombok.version>1.18.12</lombok.version>
-        <logger.version>2.13.0</logger.version>
+        <logger.version>1.2.3</logger.version>
         <junit.jupiter.version>5.6.0</junit.jupiter.version>
     </properties>
 
@@ -62,18 +62,8 @@
 
         <!-- Logging dependencies -->
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>${logger.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>${logger.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
             <version>${logger.version}</version>
         </dependency>
     </dependencies>
