--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>org.example</groupId>
     <artifactId>ui_maven</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>sandbox</module>
+    </modules>
 
     <properties>
         <java.version>1.8</java.version>
