--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>ui_maven</artifactId>
+    <artifactId>qa_auto</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>sandbox</module>
+        <module>ui</module>
     </modules>
 
     <properties>
