--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <modules>
         <module>sandbox</module>
         <module>ui</module>
+        <module>logback</module>
+        <module>logback</module>
     </modules>
 
     <properties>
@@ -30,6 +32,7 @@
                 <configuration>
                     <target>${java.version}</target>
                     <source>${java.version}</source>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
         </plugins>
