--- a/ui/src/main/resources/driver.properties
+++ b/ui/src/main/resources/driver.properties
@@ -1,1 +1,1 @@
-webdriver.chrome.driver=D:\\Utils\\chromedriver\\chromedriver.exe
+webdriver.chrome.driver=/home/vyacheslav/chromedriver/chromedriver
