--- a/assessment/pom.xml
+++ b/assessment/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>assessment_ui</artifactId>
+    <artifactId>assessment</artifactId>
 
     <build>
         <plugins>
