Added base test for rest assured and yandex disk API

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>ui</module>
         <module>assessment</module>
         <module>patterns</module>
+        <module>oauth</module>
     </modules>
 
     <properties>
