--- a/assessment/src/main/resources/driver.properties
+++ b/assessment/src/main/resources/driver.properties
@@ -2,4 +2,4 @@ webdriver.chrome.driver=/home/vyacheslav/drivers/chromedriver
 webdriver.gecko.driver=/home/vyacheslav/drivers/geckodriver
 webdriver.opera.driver=/home/vyacheslav/drivers/operadriver
 headless.mode=false
-browser.name=opera
+browser.name=chrome
