Init a module for Cucumber learning

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>ui</module>
         <module>yandex-ui</module>
         <module>patterns</module>
+        <module>cucumber</module>
     </modules>
 
     <properties>
