--- a/cucumber/pom.xml
+++ b/cucumber/pom.xml
@@ -11,4 +11,27 @@
 
     <artifactId>cucumber</artifactId>
 
+    <properties>
+        <cucumber.version>7.8.1</cucumber.version>
+        <testng.version>7.6.1</testng.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>${cucumber.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
