--- a/cucumber/pom.xml
+++ b/cucumber/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <cucumber.version>7.8.1</cucumber.version>
         <testng.version>7.6.1</testng.version>
+        <webdriver.manager.version>5.3.1</webdriver.manager.version>
     </properties>
 
     <dependencies>
@@ -31,6 +32,11 @@
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-testng</artifactId>
             <version>${cucumber.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>${webdriver.manager.version}</version>
         </dependency>
     </dependencies>
 
